fixed formatting issues on smaller devices

--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 /* opening */
 
 .outerBorder {
-  margin: 4rem;
+  margin: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,8 +12,8 @@
 
 .openingDesign {
   margin: 0px;
-  min-width: 35rem;
   min-height: 35rem;
+  width: 100%;
   background-color: #F5F7FB;
   background-image: url(../src/images/blobs.png), url(../src/images/blob5.png);
   background-position: right top, left bottom;
@@ -85,10 +85,9 @@
 /* questions */
 
 .questionsBackground {
-  box-sizing: border-box;
   margin: 0px;
   padding-top: 25px;
-  width: 35rem;
+  width: 100%;
   min-height: 35rem;
   background-color: #F5F7FB;
   background-image: url(../src/images/blobs.png), url(../src/images/blob5.png);
@@ -175,7 +174,7 @@
   font-size: 10.24px;
   text-align: center;
   color: #F5F7FB;
-  padding: 11px 20px;
+  padding: 11px 10px;
   cursor: pointer;
   box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, .2)
 }
